This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
12/14/22: Fixed setting of DE protection cover to always open after first shot
of beam intensity calibration, which made it stay closed at one site (In 4.0).

12/13/22: Fixed display of hole finder points on a non-map when no Navigator
items have been drawn (In 4.0).

12/13/22: Fixed crash cropping from image with no metadata (In 4.0).

12/13/22: Fixed montage binning overview spinner going backwards before a
montage has been opened (In 4.0).

12/13/22: Fixed Low Dose parameters getting screwed up if Eucentricity by
Focus is calibrated or run with different settings (In 4.0).

12/13/22: Fixed task button in Navigator Acquire being left depressed when
switching between Mapping and Acquisition (In 4.0).

12/13/22: Changed default for "ScopeHasPhasePlate" to 0 for FEI scopes without
Advanced Scripting (In 4.0).

12/7/22: Added ability to put "EndIfVersionBelow" in a basic mode or other
file with elements to hide so that items supported in newer versions can be
ignored (in 4.0).

11/17/22: SEM_4-0-15
11/17/22: Made SetFrameTime and ChangeFrameAndExposure commands work for DE
cameras (In 4.0).

11/15/22: Fixed crash opening Navigator Acquire dialog (In 4.0).

11/15/22: Fixed another vulnerability in drawing routine (In 4.0).

11/12/22: Fixed crash when stop reading a montage using shifts in the mdoc
file (In 4.0).

11/11/22: Fixed error in drawing Navigator items on very large montages
(In 4.0).

11/11/22: Fixed missing line break after last FEI ZLP shift in short term
calibrations (In 4.0).

11/9/22: Explicitly turned off emission before flashing FEG on JEOL to make it
ramp down better (In 4.0).

11/8/22: SEM_4-0-14
11/8/22: Changed installer to clean up all files added by installing a new 4.1