@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+12/14/22: Preserved open/closed states and floated positions of tool panels
+hidden in basic mode, even across sessions (In 4.0).
+
 12/14/22: Fixed setting of DE protection cover to always open after first shot
 of beam intensity calibration, which made it stay closed at one site (In 4.0).
 
